<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_name_repository"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/twenty_four_dp"
        android:layout_marginTop="@dimen/sixten_dp"
        android:text="@string/dummy_name_repository"
        android:textColor="@color/black"
        android:textFontWeight="700"
        android:textSize="@dimen/twenty_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_desc_repository"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/twenty_four_dp"
        android:layout_marginTop="@dimen/eight_dp"
        android:text="@string/dummy_desc_repository"
        android:textColor="@color/grey70"
        android:textSize="@dimen/fourteen_sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_repository" />

    <ImageView
        android:id="@+id/iv_star_repository"
        android:layout_width="@dimen/sixten_dp"
        android:layout_height="@dimen/sixten_dp"
        android:layout_marginTop="@dimen/twelve_dp"
        android:contentDescription="@string/image_desc"
        android:src="@drawable/ic_star"
        app:layout_constraintStart_toStartOf="@id/tv_desc_repository"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc_repository" />

    <TextView
        android:id="@+id/tv_star_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/four_dp"
        android:text="@string/dummy_number_star"
        android:textColor="@color/grey70"
        android:textSize="@dimen/ten_sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_star_repository"
        app:layout_constraintStart_toEndOf="@+id/iv_star_repository"
        app:layout_constraintTop_toTopOf="@id/iv_star_repository" />

    <TextView
        android:id="@+id/tv_latest_update_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sixten_dp"
        android:text="@string/dummy_latest_update_repository"
        android:textColor="@color/grey70"
        android:textSize="@dimen/ten_sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_star_repository"
        app:layout_constraintStart_toEndOf="@+id/tv_star_sum"
        app:layout_constraintTop_toTopOf="@id/iv_star_repository" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@id/iv_star_repository"
        android:layout_marginTop="@dimen/twelve_dp"
        android:layout_marginHorizontal="@dimen/twenty_four_dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>